--- a/.github/workflows/release-desktop.yml
+++ b/.github/workflows/release-desktop.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Typecheck
         run: npm run typecheck
 
-      - name: Validate release signing secrets
+      - name: Inspect release signing configuration
         if: startsWith(github.ref, 'refs/tags/v')
         shell: bash
         run: |
@@ -53,8 +53,8 @@ jobs:
           fi
 
           if [[ ${#missing[@]} -gt 0 ]]; then
-            echo "::error::Missing required release secrets: ${missing[*]}"
-            exit 1
+            echo "::warning::Signed release secrets missing: ${missing[*]}"
+            echo "::warning::Build will continue with unsigned/ad-hoc artifacts."
           fi
         env:
           CSC_LINK: ${{ secrets.CSC_LINK }}
@@ -63,13 +63,10 @@ jobs:
           APPLE_APP_SPECIFIC_PASSWORD: ${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
 
-      - name: Build and package desktop app
-        run: |
-          if [[ "${GITHUB_REF}" == refs/tags/v* ]]; then
-            npm run desktop:publish
-          else
-            npm run desktop:dist
-          fi
+      - name: Build and publish desktop app (tag)
+        if: startsWith(github.ref, 'refs/tags/v')
+        shell: bash
+        run: npm run desktop:publish
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CSC_LINK: ${{ secrets.CSC_LINK }}
@@ -77,6 +74,32 @@ jobs:
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_APP_SPECIFIC_PASSWORD: ${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
+
+      - name: Build desktop dist (manual)
+        if: ${{ !startsWith(github.ref, 'refs/tags/v') }}
+        shell: bash
+        run: npm run desktop:dist
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CSC_LINK: ${{ secrets.CSC_LINK }}
+          CSC_KEY_PASSWORD: ${{ secrets.CSC_KEY_PASSWORD }}
+          APPLE_ID: ${{ secrets.APPLE_ID }}
+          APPLE_APP_SPECIFIC_PASSWORD: ${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}
+          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
+
+      - name: Verify packaged artifacts
+        shell: bash
+        run: |
+          ls -la release/desktop
+          if [[ "${RUNNER_OS}" == "Windows" ]]; then
+            ls release/desktop/*.exe >/dev/null
+          elif [[ "${RUNNER_OS}" == "Linux" ]]; then
+            ls release/desktop/*.AppImage >/dev/null
+            ls release/desktop/*.deb >/dev/null
+          elif [[ "${RUNNER_OS}" == "macOS" ]]; then
+            ls release/desktop/*.dmg >/dev/null
+            ls release/desktop/*-mac.zip >/dev/null
+          fi
 
       - name: Upload release artifacts
         uses: actions/upload-artifact@v4
