--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -1,9 +1,13 @@
 {
   "name": "@simpleservers/desktop",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "private": true,
   "description": "SimpleServers desktop shell",
   "author": "SimpleServers contributors",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/charlesshaw3/SimpleServers.git"
+  },
   "main": "dist/main.js",
   "type": "module",
   "scripts": {
