fix: stabilize cross-platform desktop release pipeline

--- a/apps/desktop/electron-builder.yml
+++ b/apps/desktop/electron-builder.yml
@@ -42,6 +42,7 @@ win:
     - nsis
 
 linux:
+  maintainer: "SimpleServers contributors <charlesshaw3@users.noreply.github.com>"
   target:
     - AppImage
     - deb
