--- a/.github/workflows/release-desktop.yml
+++ b/.github/workflows/release-desktop.yml
@@ -66,7 +66,13 @@ jobs:
       - name: Build and publish desktop app (tag)
         if: startsWith(github.ref, 'refs/tags/v')
         shell: bash
-        run: npm run desktop:publish
+        run: |
+          for key in CSC_LINK CSC_KEY_PASSWORD APPLE_ID APPLE_APP_SPECIFIC_PASSWORD APPLE_TEAM_ID; do
+            if [[ -z "${!key:-}" ]]; then
+              unset "$key"
+            fi
+          done
+          npm run desktop:publish
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CSC_LINK: ${{ secrets.CSC_LINK }}
@@ -78,7 +84,13 @@ jobs:
       - name: Build desktop dist (manual)
         if: ${{ !startsWith(github.ref, 'refs/tags/v') }}
         shell: bash
-        run: npm run desktop:dist
+        run: |
+          for key in CSC_LINK CSC_KEY_PASSWORD APPLE_ID APPLE_APP_SPECIFIC_PASSWORD APPLE_TEAM_ID; do
+            if [[ -z "${!key:-}" ]]; then
+              unset "$key"
+            fi
+          done
+          npm run desktop:dist
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CSC_LINK: ${{ secrets.CSC_LINK }}
