--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@simpleservers/desktop",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "private": true,
   "description": "SimpleServers desktop shell",
-  "author": "SimpleServers contributors",
+  "author": {
+    "name": "SimpleServers contributors",
+    "email": "charlesshaw3@users.noreply.github.com"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/charlesshaw3/SimpleServers.git"
