--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simpleservers-desktop",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "private": true,
   "description": "SimpleServers desktop shell",
   "author": {
@@ -18,15 +18,28 @@
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "lint": "echo 'lint not configured yet'",
     "format": "echo 'format not configured yet'",
-    "dist": "electron-builder --config electron-builder.yml --publish never",
-    "dist:publish": "electron-builder --config electron-builder.yml --publish always"
+    "rebuild:native": "electron-rebuild -f -w better-sqlite3",
+    "dist": "npm run rebuild:native && electron-builder --config electron-builder.yml --publish never",
+    "dist:publish": "npm run rebuild:native && electron-builder --config electron-builder.yml --publish always"
   },
   "dependencies": {
-    "electron-updater": "^6.3.9"
+    "@fastify/cors": "^11.1.0",
+    "@fastify/sensible": "^6.0.3",
+    "@fastify/websocket": "^11.2.0",
+    "adm-zip": "^0.5.16",
+    "better-sqlite3": "^12.2.0",
+    "electron-updater": "^6.3.9",
+    "fastify": "^5.6.1",
+    "node-cron": "^4.2.1",
+    "pidusage": "^4.0.1",
+    "tar": "^7.5.7",
+    "undici": "^7.16.0",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "electron": "37.10.3",
     "electron-builder": "^26.0.12",
+    "@electron/rebuild": "^4.0.3",
     "typescript": "^5.9.2"
   }
 }
