--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@simpleservers/api",
-  "version": "0.5.2",
+  "version": "0.5.3",
   "private": true,
   "type": "module",
   "scripts": {
@@ -13,6 +13,7 @@
     "format": "echo 'format not configured yet'"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.750.0",
     "@fastify/cors": "^11.1.0",
     "@fastify/sensible": "^6.0.3",
     "@fastify/websocket": "^11.2.0",
